@@ -2,7 +2,7 @@ name = IRC-Client
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/IRC/Client.rakumod
+filename = doc/IRC-Client.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
